# vyatta-cfg-quagga

./: .frlog  .gitignore  .merge-branch-exclude  COPYING  Makefile.am  README  configure.ac  gen-interface-templates.pl
debian/: README  changelog  control  copyright  lintian  postinst  preinst  rules  vyatta-cfg-quagga-dataplane.install  vyatta-cfg-quagga-extra.install  vyatta-cfg-quagga-extra.lintian-overrides  vyatta-cfg-quagga-serial.lintian-overrides  vyatta-cfg-quagga-wireless.lintian-overrides  vyatta-cfg-quagga.install  vyatta-cfg-quagga.postinst
interface-templates/disable-link-detect/: node.def
interface-templates/ip/: node.def
interface-templates/ip/ospf/: node.def
interface-templates/ip/ospf/authentication/: node.def
interface-templates/ip/ospf/bandwidth/: node.def
interface-templates/ip/ospf/bfd/: node.def
interface-templates/ip/ospf/cost/: node.def
interface-templates/ip/ospf/dead-interval/: node.def
interface-templates/ip/ospf/hello-interval/: node.def
interface-templates/ip/ospf/mtu-ignore/: node.def
interface-templates/ip/ospf/network/: node.def
interface-templates/ip/rip/: node.def
interface-templates/ip/source-validation/: node.def
interface-templates/ipv6/: node.def
interface-templates/ipv6/ospfv3/: node.def
interface-templates/ipv6/ripng/: node.def
lib/Vyatta/Quagga/: Config.pm
scripts/: quagga-manager  vyatta-asn-first-cleanup.pl  vyatta-gateway-static_route-check.pl  vyatta-link-detect  vyatta-linkstatus.pl  vyatta-next-hop-check  vyatta-policy-action-verify.pl  vyatta-protocol  vyatta-protocol-restart.pl  vyatta-reload-proto-config  vyatta-show-protocols  vyatta-static-dhcp.pl  vyatta-update-static-route.pl  vyatta-vtysh.pl  vyatta_quagga_utils.pl  vyos-update-rpki-cache.py
scripts/bgp/: vyatta-bgp.pl
scripts/ospfv3/: vyatta-ospfv3.pl
scripts/policy/: vyatta-check-as-prepend.pl  vyatta-policy.pl
src/: .gitignore  check_next_hop.c  check_prefix_boundary.c  check_ucast_static.c  check_ucast_static.h
templates/policy/: node.def
templates/policy/access-list/: node.def
templates/policy/access-list6/: node.def
templates/policy/as-path-list/: node.def
templates/policy/community-list/: node.def
templates/policy/extcommunity-list/: node.def
templates/policy/large-community-list/: node.def
templates/policy/prefix-list/: node.def
templates/policy/prefix-list6/: node.def
templates/policy/route/: node.def
templates/policy/route-map/: node.def
templates/policy/route6/: node.def
templates/protocols/: node.def
templates/protocols/bgp/: node.def
templates/protocols/ospf/: node.def
templates/protocols/ospfv3/: node.def
templates/protocols/rip/: node.def
templates/protocols/ripng/: node.def
templates/protocols/rpki/: node.def
templates/protocols/static/: node.def
templates/protocols/vrf/: node.def
templates/system/gateway-address/: node.def
(+1163 files in other folders)
